data gen workaround